# zephyr_summit

./: CMakeLists.txt  Kconfig  prj.conf
boards/: esp32s3_box_lite.overlay
remote/: CMakeLists.txt  prj.conf
remote/boards/: esp32s3_net.overlay
remote/src/: buttons.c  buttons.h  main.c  temp_sensor.c  temp_sensor.h
src/: display.c  display.h  main.c  mqtt_service.c  mqtt_shell.c  project.h  wifi.c
src/lvgl/: zephyr_logo.c
